tests/compile_fail/dynify_with_non_ident_args.rs
#[dynify::dynify]
trait Trait {
    async fn test(&self, (arg): String, NewType(inner): NewType);
}

fn main() {}
